--- a/app/src/main/res/layout/activity_detalhe.xml
+++ b/app/src/main/res/layout/activity_detalhe.xml
@@ -46,18 +46,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ImageButton
-                        android:id="@+id/imageButton2"
-                        android:layout_width="46dp"
-                        android:layout_height="0dp"
-                        android:layout_marginEnd="16dp"
-                        android:backgroundTint="#01FFFFFF"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/botao_editar" />
-
-                    <TextView
+                    <EditText
                         android:id="@+id/nomeHabito"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -70,7 +59,18 @@
                         android:textSize="24sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/imageButton2" />
+                        app:layout_constraintTop_toTopOf="@+id/btnSalvarNomeHabito" />
+
+                    <ImageButton
+                        android:id="@+id/btnSalvarNomeHabito"
+                        android:layout_width="46dp"
+                        android:layout_height="0dp"
+                        android:layout_marginEnd="16dp"
+                        android:backgroundTint="#01FFFFFF"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/botao_salvar" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
